# api-gateway/internal/models/budget.go
@@ -1,35 +1,41 @@
 package models
 
 type CreateBudgetRequest struct {
-    CategoryID string `json:"category_id"`
-    Amount     int64  `json:"amount"`
-    Currency   string `json:"currency"`
+	CategoryID string `json:"category_id"`
+	Amount     int64  `json:"amount"`
+	Currency   string `json:"currency"`
 }
 
 type CreateBudgetResponse struct {
-    Message  string `json:"message"`
-    BudgetID string `json:"budget_id"`
+	Message  string `json:"message"`
+	BudgetID string `json:"budget_id"`
 }
 
 type GetListBudgetRequest struct{}
 
 type Budget struct {
-    BudgetID string `json:"budget_id"`
-    Category string `json:"category"`
-    Amount   int64  `json:"amount"`
-    Spent    int64  `json:"spent"`
-    Currency string `json:"currency"`
+	BudgetID string `json:"budget_id"`
+	Category string `json:"category"`
+	Amount   int64  `json:"amount"`
+	Spent    int64  `json:"spent"`
+	Currency string `json:"currency"`
 }
 
 type GetListBudgetResponse struct {
-    List []Budget `json:"list"`
+	List []Budget `json:"list"`
 }
 
 type UpdateBudgetRequest struct {
-    BudgetID string `json:"budget_id"`
-    Amount   int64  `json:"amount"`
+	BudgetID string `json:"budget_id"`
+	Amount   int64  `json:"amount"`
 }
 
 type UpdateBudgetResponse struct {
-    Message string `json:"message"`
+	Message string `json:"message"`
+}
+
+type GetBudgetsResp struct {
+	Status  bool      `json:"status"`
+	Message string    `json:"message"`
+	Budget  []*Budget `json:"budgets"`
 }
